labs.platform: fix displaying of icons in platform Menu

Looks like it didn't work from the start:
platform backend (m_handle) has not yet been created by the time
creating a MenuItem component, so m_handle->setIcon() was never called.
To make it work and also to make it consistent with syncing of
all other properties, let's move m_handle->setIcon() into sync() method.

Fixes: QTBUG-103017
Change-Id: Ib457735c840a8621a16ec6363a0c19f0c21fae3b
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
(cherry picked from commit fce525fc789d4835476be6f42df16edfa7aec270)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>